# lab2_polynom

./: CMakeLists.txt  Library.cpp  Library.h  Menu+helpful functions.cpp  Menu+helpful functions.h  Polynom.cpp  Polynom.h  Sequence.cpp  complex.cpp  complex.h  main.cpp
Array/: ArrSeq.cpp  ArrSeq.h  DynArray.cpp
List/: LinkedList.cpp  LinkedList.h  ListSeq.cpp  ListSeq.h
tests/: Concat.txt  Count(x).txt  Der.txt  Mult.txt  Subseq.txt  Sum.txt
